--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
@@ -15,6 +16,7 @@
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
+    "styled-system": "^5.1.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
