--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.2.0",
     "socket.io-client": "^4.5.1",
+    "socket.io-mock": "^1.3.2",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "styled-system": "^5.1.5",
