--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,11 @@
   "main": "server.js",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "socket.io": "^4.0.1"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   }
 }
