--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start-server": "cd server && npm i && npm start",
     "start-client": "cd client && npm i && npm run build",
     "start": "npm run start-client && npm run start-server",
-    "heroku-postbuild": "heroku config:set NPM_CONFIG_PRODUCTION=false && npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
