--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://anastasiia-sharkova.github.io/finance-test-task/client",
+  "homepage": "gh-pages -d ./build",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext js,jsx,ts,tsx --fix",
-    "deploy": "gh-pages -d .client/build"
+    "deploy": "gh-pages -d ./build"
   },
   "eslintConfig": {
     "extends": [
