--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,13 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "gh-pages -d ./build",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/react-redux": "^7.1.24",
+    "babel-eslint": "^10.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
@@ -21,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext js,jsx,ts,tsx --fix",
     "deploy": "gh-pages -d ./build"
@@ -31,6 +32,7 @@
       "react-app"
     ]
   },
+  "eslintIgnore": "/node_modules",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -42,5 +44,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.17.12",
+    "@types/jest": "^28.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "7.11.0",
+    "eslint-plugin-react": "^7.30.0",
+    "jest": "^28.1.1",
+    "ts-jest": "^28.0.5"
   }
 }
