--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@types/node": "^18.7.14",
     "@types/react": "^18.0.18",
-    "@types/react-dom": "^18.0.6"
+    "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24"
   }
 }
