--- a/client/package.json
+++ b/client/package.json
@@ -44,5 +44,8 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "2.7.1"
+  },
+  "overrides": {
+    "react-error-overlay": "6.0.9"
   }
 }
