--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start-server": "cd server && npm i && npm start",
     "start-client": "cd client && npm i && npm run build",
-    "start": "npm run start-client && npm run start-server",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix client && npm run build --prefix client"
+    "start": "npm run start-client && npm run start-server"
   },
   "repository": {
     "type": "git",
