finance app implemented

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -22,7 +22,9 @@
     ],
     "import/no-unresolved": "error",
     "no-console": "warn",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "@typescript-eslint/quotes": ["error", "double", { "avoidEscape": true }],
+    "@typescript-eslint/comma-dangle": "off"
   },
   "settings": {
     "react": {
