--- a/client/package.json
+++ b/client/package.json
@@ -7,39 +7,50 @@
     "start": "vite --open",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "test": "jest",
     "deploy": "tsc && vite build && gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
     "@reduxjs/toolkit": "^1.9.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "clsx": "1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "sass": "^1.58.3",
     "socket.io-client": "^4.7.2",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "tss-react": "^4.4.2",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@mate-academy/eslint-config-react-typescript": "^1.0.11",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.34.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^5.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
