--- a/client/tsconfig.paths.json
+++ b/client/tsconfig.paths.json
@@ -2,9 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./client/src/*"
-      ]
+      "@/*": ["./client/src/*"]
     }
   }
 }
